[package]
name = "piet-cairo"
version = "0.4.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Cairo backend for piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
readme = "../README.md"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
piet = { version = "0.4.0", path = "../piet" }

cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", package = "cairo-rs", default_features = false, features = ["xcb"] }
pango = { version = "0.9.1", features = ["v1_44"] }
pango-sys = { version = "0.10.0", features = ["v1_44"] }
pangocairo = "0.10.0"
glib = "0.10.3"
unicode-segmentation = "1.3.0"
xi-unicode = "0.3.0"

[dev-dependencies]
piet = { version = "0.4.0", path = "../piet", features = ["samples"] }
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", package = "cairo-rs", default-features = false, features = ["png"] }
