[package]
name = "piet-cairo"
version = "0.4.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Cairo backend for piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
readme = "../README.md"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
piet = { version = "0.4.0", path = "../piet" }

cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", default_features = false, features = ["xcb"] }
pango = { git = "https://github.com/gtk-rs/gtk-rs-core", features = ["v1_44"] }
pango-sys = { git = "https://github.com/gtk-rs/gtk-rs-core", features = ["v1_44"] }
pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core", package = "pangocairo", default_features = false}

glib = { git = "https://github.com/gtk-rs/gtk-rs-core", package = "glib"}
unicode-segmentation = "1.3.0"
xi-unicode = "0.3.0"

[dev-dependencies]
piet = { version = "0.4.0", path = "../piet", features = ["samples"] }
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", default-features = false, features = ["png"] }
